--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Bazel & SwiftLint
+bazel-*
+SwiftLint.xcodeproj
+
+# macOS
+.DS_Store
